packages/lustre-v6.6.103.3/test/should_fail/type/broken/ts03.lus

-- KO 

node ma_macro<<const i : int>>(x: int) returns (y: int);
let
   y = i + x;
tel

--*** Bad static argument nature, a constant was expected

node main = ma_macro<<+>>;
